Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37348

Logged CREATE TEMPORARY TABLE LIKE from unlogged table fails

    XMLWordPrintable

Details

    • Not for Release Notes

    Description

      Logging temporary tables is enabled for statement logging with create_tmp_table_binlog_formats.
      To get the error, we need to create a table LIKE t1, where t1 wasn't marked as logged.

      set binlog_format='MIXED';
      create temporary table t1 (x int);
      set create_tmp_table_binlog_formats='MIXED';
      create temporary table t2 like t1;
      

      Execution result

      query 'create temporary table t2 like t1' failed:
      ER_NO_SUCH_TABLE (1146): Table 'test.t2' doesn't exist
      

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              nikitamalyavin Nikita Malyavin
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 20m
                  1d 20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.