MDEV-37348 Logged CREATE TEMPORARY TABLE LIKE from unlogged table fails

Open temporary table properly. It doesn't appear in thd->open_tables,
so no need to close it.